--- a/views/user/singleProduct.ejs
+++ b/views/user/singleProduct.ejs
@@ -296,4 +296,4 @@ let sizeData;
   }
     </script>
   
-    <%- include('../Layout/UserFooter.ejs') %>
+    <%- include('../layout/UserFooter.ejs') %>
