--- a/views/admin/addProduct.ejs
+++ b/views/admin/addProduct.ejs
@@ -1,4 +1,4 @@
-<%- include('../Layout/adminHeader.ejs') %>
+<%- include('../layout/adminHeader.ejs') %>
 <form action="/admin/addproduct" method="post" enctype="multipart/form-data" id="product-form" onsubmit="return validationChecking()">
 
         <section class="content-main">
@@ -375,4 +375,4 @@
     
 
 
-    <%- include('../Layout/adminFooter.ejs') %>
+    <%- include('../layout/adminFooter.ejs') %>
