--- a/views/admin/allOrder.ejs
+++ b/views/admin/allOrder.ejs
@@ -1,4 +1,4 @@
-<%- include('../Layout/adminHeader.ejs') %>
+<%- include('../layout/adminHeader.ejs') %>
 
 
   <section class="content-main">
@@ -150,4 +150,4 @@
 
   </script>
 
-  <%- include('../Layout/adminFooter.ejs') %>
+  <%- include('../layout/adminFooter.ejs') %>
