--- a/views/admin/brandAdd.ejs
+++ b/views/admin/brandAdd.ejs
@@ -1,4 +1,4 @@
-<%- include('../Layout/adminHeader.ejs') %>
+<%- include('../layout/adminHeader.ejs') %>
 
 <form action="/admin/addBrand" method="post" enctype="multipart/form-data" id="brand"  onsubmit="return validationChecking()">
     <section class="content-main">
@@ -156,4 +156,4 @@ function validationChecking() {
 
 
 
-    <%- include('../Layout/adminFooter.ejs') %>
+    <%- include('../layout/adminFooter.ejs') %>
