--- a/views/admin/brandEdit.ejs
+++ b/views/admin/brandEdit.ejs
@@ -1,4 +1,4 @@
-<%- include('../Layout/adminHeader.ejs') %>
+<%- include('../layout/adminHeader.ejs') %>
 
 <form action="/admin/editBrand" method="post" enctype="multipart/form-data" onsubmit="return validationChecking()">
 
@@ -171,4 +171,4 @@ document.addEventListener('DOMContentLoaded', function() {
     </script>
         
         
-    <%- include('../Layout/adminFooter.ejs') %>
+    <%- include('../layout/adminFooter.ejs') %>
