--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -1,4 +1,4 @@
-<%- include('../Layout/adminHeader.ejs') %>
+<%- include('../layout/adminHeader.ejs') %>
 
 <section class="content-main">
   <div class="content-header">
@@ -186,4 +186,4 @@ function ProductUnlist(productId) {
 
   </script>
 
-    <%- include('../Layout/adminFooter.ejs') %>
+    <%- include('../layout/adminFooter.ejs') %>
