--- a/views/admin/couponAdd.ejs
+++ b/views/admin/couponAdd.ejs
@@ -1,4 +1,4 @@
-<%- include('../Layout/adminHeader.ejs') %>
+<%- include('../layout/adminHeader.ejs') %>
 <form action="" method="post"  id="coupon-form" >
     <section class="content-main">
         <div class="row">
@@ -196,4 +196,4 @@ console.log(expiryDate,"expiryDate");
  </script>
 
 
-    <%- include('../Layout/adminFooter.ejs') %>
+    <%- include('../layout/adminFooter.ejs') %>
