--- a/views/admin/couponEdit.ejs
+++ b/views/admin/couponEdit.ejs
@@ -1,4 +1,4 @@
-<%- include('../Layout/adminHeader.ejs') %>
+<%- include('../layout/adminHeader.ejs') %>
 
 
 
@@ -191,4 +191,4 @@ const addCoupon = () => {
     
 
 
-    <%- include('../Layout/adminFooter.ejs') %>
+    <%- include('../layout/adminFooter.ejs') %>
