--- a/views/admin/editProduct.ejs
+++ b/views/admin/editProduct.ejs
@@ -1,4 +1,4 @@
-<%- include('../Layout/adminHeader.ejs') %>
+<%- include('../layout/adminHeader.ejs') %>
     <form action="" method="post" enctype="multipart/form-data" id="product-form"
     onsubmit="return validationChecking()">
 
@@ -433,4 +433,4 @@ function validationChecking() {
     </script>
 
 
-    <%- include('../Layout/adminFooter.ejs') %>
+    <%- include('../layout/adminFooter.ejs') %>
