--- a/views/admin/offerAdd.ejs
+++ b/views/admin/offerAdd.ejs
@@ -1,4 +1,4 @@
-<%- include('../Layout/adminHeader.ejs') %>
+<%- include('../layout/adminHeader.ejs') %>
 
 
 
@@ -278,4 +278,4 @@ console.log(data,"validationChecking");
 
 
 
-    <%- include('../Layout/adminFooter.ejs') %>
+    <%- include('../layout/adminFooter.ejs') %>
