--- a/views/admin/orderDetails.ejs
+++ b/views/admin/orderDetails.ejs
@@ -1,4 +1,4 @@
-<%- include('../Layout/adminHeader.ejs') %>
+<%- include('../layout/adminHeader.ejs') %>
 
 <section class="content-main">
     <div class="content-header">
@@ -212,4 +212,4 @@ function changeStatus(id, productId,status) {
     
 
 
-    <%- include('../Layout/adminFooter.ejs') %>
+    <%- include('../layout/adminFooter.ejs') %>
