--- a/views/admin/salesReport.ejs
+++ b/views/admin/salesReport.ejs
@@ -1,4 +1,4 @@
-<%- include('../Layout/adminHeader.ejs') %>
+<%- include('../layout/adminHeader.ejs') %>
 
         <section class="content-main">
             <div class="content-header">
@@ -196,4 +196,4 @@ $(document).ready(function ($) {
 <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.min.js"></script>
 <!-- xlsx.core.min.js -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.4/xlsx.core.min.js"></script>
-<%- include('../Layout/adminFooter.ejs') %>
+<%- include('../layout/adminFooter.ejs') %>
