--- a/views/admin/addCategory.ejs
+++ b/views/admin/addCategory.ejs
@@ -1,4 +1,4 @@
-<%- include('../Layout/adminHeader.ejs') %>
+<%- include('../layout/adminHeader.ejs') %>
 
 <form action="/admin/addCategory" method="post"id="category-form" enctype="multipart/form-data"  onsubmit="return validationChecking()">
     <section class="content-main">
@@ -158,4 +158,4 @@ document.addEventListener('DOMContentLoaded', function() {
         </script>
 
 
-    <%- include('../Layout/adminFooter.ejs') %>
+    <%- include('../layout/adminFooter.ejs') %>
