--- a/views/admin/adminHome.ejs
+++ b/views/admin/adminHome.ejs
@@ -1,4 +1,4 @@
-<%- include('../Layout/adminHeader.ejs') %>
+<%- include('../layout/adminHeader.ejs') %>
 
 <section class="content-main">
   <div class="content-header">
@@ -243,7 +243,7 @@ function highlightButton(button) {
 </script>  
 
 
-    <%- include('../Layout/adminFooter.ejs') %>
+    <%- include('../layout/adminFooter.ejs') %>
     <script src="/assets/js/vendors/chart.js"></script> 
 
     <script src="/assets/js/custom-chart.js" type="text/javascript"></script>
