--- a/views/admin/couponDetails.ejs
+++ b/views/admin/couponDetails.ejs
@@ -1,4 +1,4 @@
-<%- include('../Layout/adminHeader.ejs') %>
+<%- include('../layout/adminHeader.ejs') %>
 
 <section class="content-main">
     <div class="content-header">
@@ -125,4 +125,4 @@
 </script>
 
 
-<%- include('../Layout/adminFooter.ejs') %>
+<%- include('../layout/adminFooter.ejs') %>
