--- a/views/admin/couponList.ejs
+++ b/views/admin/couponList.ejs
@@ -1,4 +1,4 @@
-<%- include('../Layout/adminHeader.ejs') %>
+<%- include('../layout/adminHeader.ejs') %>
         <section class="content-main">
             <div class="content-header">
                 <div>
@@ -156,4 +156,4 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </script>
 
-<%- include('../Layout/adminFooter.ejs') %>
+<%- include('../layout/adminFooter.ejs') %>
