--- a/views/admin/offerEdit.ejs
+++ b/views/admin/offerEdit.ejs
@@ -1,4 +1,4 @@
-<%- include('../Layout/adminHeader.ejs') %>
+<%- include('../layout/adminHeader.ejs') %>
 
 
 
@@ -279,4 +279,4 @@ console.log(data,"validationChecking");
 
 
 
-    <%- include('../Layout/adminFooter.ejs') %>
+    <%- include('../layout/adminFooter.ejs') %>
