--- a/views/admin/offerList.ejs
+++ b/views/admin/offerList.ejs
@@ -1,4 +1,4 @@
-<%- include('../Layout/adminHeader.ejs') %>
+<%- include('../layout/adminHeader.ejs') %>
 
 
         <section class="content-main">
@@ -195,4 +195,4 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </script>
 
-<%- include('../Layout/adminFooter.ejs') %>
+<%- include('../layout/adminFooter.ejs') %>
