--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -1,4 +1,4 @@
-<%- include('../Layout/UserHeader.ejs') %>
+<%- include('../layout/UserHeader.ejs') %>
 
     <main class="main">
         <div class="page-header breadcrumb-wrap">
@@ -748,4 +748,4 @@
             return isValid;
         }
     </script>
-    <%- include('../Layout/UserFooter.ejs') %>
+    <%- include('../layout/UserFooter.ejs') %>
