--- a/views/user/coupons.ejs
+++ b/views/user/coupons.ejs
@@ -39,7 +39,7 @@
   opacity: .1;
 }
 </style>
-<%- include('../Layout/UserHeader.ejs') %>
+<%- include('../layout/UserHeader.ejs') %>
 
   <main class="main">
     <div class="page-header breadcrumb-wrap">
@@ -163,4 +163,4 @@
     </section>
   </main>
 
-  <%- include('../Layout/UserFooter.ejs') %>
+  <%- include('../layout/UserFooter.ejs') %>
