--- a/views/user/editAddres.ejs
+++ b/views/user/editAddres.ejs
@@ -1,4 +1,4 @@
-<%- include('../Layout/UserHeader.ejs') %>
+<%- include('../layout/UserHeader.ejs') %>
 
   <main class="main">
     <div class="page-header breadcrumb-wrap">
@@ -182,4 +182,4 @@ function validationChecking() {
 </script>
   
 
-  <%- include('../Layout/UserFooter.ejs') %>
+  <%- include('../layout/UserFooter.ejs') %>
