--- a/views/user/orderDetails.ejs
+++ b/views/user/orderDetails.ejs
@@ -1,4 +1,4 @@
-<%- include('../Layout/UserHeader.ejs') %>
+<%- include('../layout/UserHeader.ejs') %>
 
     <section class="content-main">
       <div class="text-end me-4"> <button id="pdfButton" class="btn btn-secondary print ms-2"><i class="icon material-icons md-print"></i> Download </button></div> 
