--- a/views/user/userAddress.ejs
+++ b/views/user/userAddress.ejs
@@ -1,4 +1,4 @@
-<%- include('../Layout/UserHeader.ejs') %>
+<%- include('../layout/UserHeader.ejs') %>
 
   <main class="main">
     <div class="page-header breadcrumb-wrap">
@@ -181,4 +181,4 @@ if (address.is_listed ) {
   </script>
   
 
-  <%- include('../Layout/UserFooter.ejs') %>
+  <%- include('../layout/UserFooter.ejs') %>
