--- a/views/user/about.ejs
+++ b/views/user/about.ejs
@@ -1,4 +1,4 @@
-<%- include('../Layout/UserHeader.ejs') %>
+<%- include('../layout/UserHeader.ejs') %>
 <main class="main single-page">
     <div class="page-header breadcrumb-wrap">
         <div class="container">
@@ -160,4 +160,4 @@
         </div>
     </section>
 </main>
-<%- include('../Layout/UserFooter.ejs') %>
+<%- include('../layout/UserFooter.ejs') %>
