--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -14,7 +14,7 @@
     }
 </style>
 
-<%- include('../Layout/UserHeader.ejs') %>
+<%- include('../layout/UserHeader.ejs') %>
 
     <main class="main">
         <div class="page-header breadcrumb-wrap">
@@ -246,4 +246,4 @@
 
 
     </script>
-    <%- include('../Layout/UserFooter.ejs') %>
+    <%- include('../layout/UserFooter.ejs') %>
