--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -19,15 +19,7 @@
 
 
 <main class="main">
-  <div class="page-header breadcrumb-wrap">
-      <div class="container">
-          <div class="breadcrumb">
-              <a href="index.html" rel="nofollow">Home</a>
-              <span></span> Pages
-              <span></span> Login / Register
-          </div>
-      </div>
-  </div>
+
   <section class="pt-150 pb-150">
       <div class="container">
           <div class="row">
@@ -67,8 +59,8 @@
                                   <div class="login_footer form-group">
                                       <div class="chek-form">
                                           <div class="custome-checkbox">
-                                              <input class="form-check-input" type="checkbox" name="checkbox" id="exampleCheckbox1" value="">
-                                              <label class="form-check-label" for="exampleCheckbox1"><span>Remember me</span></label>
+                                              <!-- <input class="form-check-input" type="checkbox" name="checkbox" id="exampleCheckbox1" value="">
+                                              <label class="form-check-label" for="exampleCheckbox1"><span>Remember me</span></label> -->
                                           </div>
                                       </div>
                                       <a class="text-muted" href="/forgotPassword">Forgot password?</a>
@@ -90,10 +82,10 @@
                               <div class="divider-text-center mt-15 mb-15">
                                 <span> or</span>
                             </div>
-                            <ul class="btn-login list_none text-center mb-15">
+                            <!-- <ul class="btn-login list_none text-center mb-15">
                                 <li><a href="#" class="btn btn-facebook hover-up mb-lg-0 mb-sm-4">Login With Facebook</a></li>
                                 <li><a href="#" class="btn btn-google hover-up">Login With Google</a></li>
-                            </ul>
+                            </ul> -->
                             <div class="text-muted text-center">Already have an account? <a href="/register">Sign in now</a></div>
                           </div>
                       </div>
