--- a/views/user/order.ejs
+++ b/views/user/order.ejs
@@ -1,4 +1,4 @@
-<%- include('../Layout/UserHeader.ejs') %>
+<%- include('../layout/UserHeader.ejs') %>
 
 <main class="main">
   <div class="page-header breadcrumb-wrap">
@@ -163,8 +163,34 @@
                   </div>
               </div>
           </div>
+
+          <div class="pagination-area mt-30 mb-50" style="display: flex; justify-content: center;">
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination justify-content-start">
+                      <% if (currentPage > 1) { %>
+                        <li class="page-item">
+                          <a class="page-link" href="?page=<%= currentPage - 1 %>"><</a>
+                        </li>
+                      <% } %>
+                  
+                      <% for (let i = 1; i <= totalPages; i++) { %>
+                        <li class="page-item <%= currentPage === i ? 'active' : '' %>">
+                          <a class="page-link" href="?page=<%= i %>"><%= i %></a>
+                        </li>
+                      <% } %>
+                  
+                      <% if (currentPage < totalPages) { %>
+                        <li class="page-item">
+                          <a class="page-link" href="?page=<%= currentPage + 1 %>">></a>
+                        </li>
+                      <% } %>
+                 
+                        
+                    </ul>
+                </nav>
+            </div>
       </div>
   </section>
 </main>
 
-<%- include('../Layout/UserFooter.ejs') %>
+<%- include('../layout/UserFooter.ejs') %>
