--- a/views/user/wallets.ejs
+++ b/views/user/wallets.ejs
@@ -1,4 +1,4 @@
-<%- include('../Layout/UserHeader.ejs') %>
+<%- include('../layout/UserHeader.ejs') %>
 
 <main class="main">
   <div class="page-header breadcrumb-wrap">
@@ -121,8 +121,30 @@
                   </div>
               </div>
           </div>
+
+          <div class="d-flex justify-content-end">
+                    <% if (wallet && wallet.transaction.length> 0) { %>
+                        <ul class="pagination">
+                            <% if (currentPage> 1) { %>
+                                <li><a href="/wallet?page=<%= currentPage - 1 %>">Previous</a></li>
+                                <% } %>
+
+                                    <% const totalPages=Math.ceil(wallet.transaction.length / 7); %>
+                                        <% for (let i=1; i <=totalPages; i++) { %>
+                                            <li <% if (i===currentPage) { %>class="active"<% } %>>
+                                                    <a class="text-primary" href="/wallet?page=<%= i %>">
+                                                        <%= i %>
+                                                    </a>
+                                            </li>
+                                            <% } %>
+                                                <% if (currentPage < totalPages) { %>
+                                                    <li><a href="/wallet?page=<%= currentPage + 1 %>">Next</a></li>
+                                                    <% } %>
+                        </ul>
+                        <% } %>
+                </div>
       </div>
   </section>
 </main>
 
-<%- include('../Layout/UserFooter.ejs') %>
+<%- include('../layout/UserFooter.ejs') %>
