--- a/views/user/userProfile.ejs
+++ b/views/user/userProfile.ejs
@@ -1,4 +1,4 @@
-<%- include('../layout/userHeader.ejs') %>
+<%- include('../layout/UserHeader.ejs') %>
 
   <main class="main">
     <section class="pt-80 pb-100">
@@ -263,4 +263,4 @@
 
 
 
-  <%- include('../layout/userFooter.ejs') %>
+  <%- include('../layout/UserFooter.ejs') %>
