--- a/views/user/wallets.ejs
+++ b/views/user/wallets.ejs
@@ -61,7 +61,13 @@
                                     <div class="card-body d-flex flex-column align-items-center justify-content-center">
                                         <i class="fa-solid fa-wallet" style="font-size: 50px;"></i><h3>Wallet Balance</h3>
                                     
-                                        <p style="font-size: 30px;">₹&nbsp; <%= wallet.walletBalance %></p>
+                              
+
+                                        <% if (wallet) {
+                                            %>          <p style="font-size: 30px;">₹&nbsp; <%= wallet.walletBalance %></p><%
+                                        }else{
+                                            %>          <p style="font-size: 30px;">₹&nbsp; 0</p><%
+                                        } %>
                                     </div>
                       
                                   </div>
